Add Pictures, link, text and classes to popular-cupcakes.html

--- a/cupcake-shop/popular-cupcakes.html
+++ b/cupcake-shop/popular-cupcakes.html
@@ -6,6 +6,33 @@
 </head>
 <body>
   <h3><a href="index.html">HOME</a></h3>
-  <h1>Look At Them Flashy Cakes!</h1>
+  <h1 class="flashy">Look At Them Flashy Cakes!</h1>
+  <p>
+    <span title="Too Fast to Rise!"><img src="img/ugly.jfif" alt="Flat Cake" height="300" width="400" ></span></p>
+  <p class="flashy">
+    Look at that sparkle! 
+    <span title="See Dr. Nick's 'Window to Weight Gain' for more info!">Most cakes should pixelate, glisten and leak through the cupcake paper.</span>
+    Take a peek at the recipe <a href="https://www.snackncake.com/post_ugly-looking-cupcakes_581642/">here!</a>
+  </p>
+  <p>
+    <span title="Necro-Nom-Nom-Nom-Icon!"><img src="img/deadite.jpg" alt="Undead Cake" height="420" width="640"></span>
+  </p>
+  <p>
+    Woaaah-- who's biting who <a href="https://cakesdecor.com/cakes/25250-ugly-zombie-cupcake">now</a>!? 
+  </p>
+  <p>
+    <span title="D'aww."><img src="img/penguin.jpg" alt="Penguin Cake" height="300" width="300"></span>
+  </p>
+  <p>
+    Okay, this one is actually pretty <a href="http://victorbakery.com/index.php/product/ugly-cutes/">cute</a>.
+  </p>
+
+  <h3>I'm Not Gonna Lie...</h3>
+  <p>I was just gonna post pictures of crappy cupcakes and call this assignment done, but there's some good stuff out there.</p>
+  <ul>
+    <li>Like <a href="https://www.pinterest.com/pin/185914290842646109/">here</a>...</li>
+    <li>...<a href="https://images5.fanpop.com/image/photos/31000000/Weird-Cupcakes-monsterka-and-leonchii-31027919-375-500.jpg">here</a>...</li>
+    <li>and <a href="https://images5.fanpop.com/image/photos/31000000/Weird-Cupcakes-monsterka-and-leonchii-31028085-480-340.jpg">here</a>.</li>
+  </ul>
 </body>
 </html>
