--- a/cupcake-shop/index.html
+++ b/cupcake-shop/index.html
@@ -8,5 +8,11 @@
   <h1>HOME OF SMALL CAKES</h1>
   <p>Did you just search the obscure pages of github in an effort to find mention of those tiny cakes that are said to be as small as a cup? What luck! Click the link if you dare.</p>
   <h3><a href="popular-cupcakes.html">DARE YOU!?</a></h3>
+
+  <p>But... like, there are other things to look at too. I've got some Lorem ipsum going and a boring, stream-of-consciousness lecture hot on the plate (just like these cakes)!</p>
+  <ul>
+    <li><a href="../paragraphs.html">Lorem Ip<em>sum</em> practice site!</a></li>
+    <li><a href="../boring-lecture/lecture1.html">My Unasked-For Thoughts</a></li>
+  </ul>
 </body>
 </html>
