--- a/cupcake-shop/popular-cupcakes.html
+++ b/cupcake-shop/popular-cupcakes.html
@@ -18,12 +18,12 @@
     <span title="Necro-Nom-Nom-Nom-Icon!"><img src="img/deadite.jpg" alt="Undead Cake" height="420" width="640"></span>
   </p>
   <p>
-    Woaaah-- who's biting who <a href="https://cakesdecor.com/cakes/25250-ugly-zombie-cupcake">now</a>!? 
+    <strong class="flashy">Woaaah</strong>-- who's biting who <a href="https://cakesdecor.com/cakes/25250-ugly-zombie-cupcake"><em class="dead">now</em></a>!? 
   </p>
   <p>
     <span title="D'aww."><img src="img/penguin.jpg" alt="Penguin Cake" height="300" width="300"></span>
   </p>
-  <p>
+  <p class="best">
     Okay, this one is actually pretty <a href="http://victorbakery.com/index.php/product/ugly-cutes/">cute</a>.
   </p>
 
