Add Home page to cupcake-shop index.html and css to lecture1.html

--- a/boring-lecture/lecture1.html
+++ b/boring-lecture/lecture1.html
@@ -5,6 +5,7 @@
   <title>I Do What I Want!</title>
 </head>
 <body>
+  <h3><a href="../cupcake-shop/index.html">HOME</a></h3>
   <h1>A Lecture on Coding and Cupcakes</h1>
   <h2 class="intro">And Why No One Will Pay Me to Give It</h2>
   <p class="intro">
