--- a/paragraphs.html
+++ b/paragraphs.html
@@ -5,6 +5,7 @@
   <title>Paragraphs!</title>
 </head>
 <body>
+  <h3><a href="cupcake-shop/index.html">HOME</a></h3>
   <h1>Paragraphs of Text</h1>
   <h2>Plus An Intro At The Top!</h2>
 
