Add div for class 'intro' in lecture1.html.

--- a/boring-lecture/lecture1.html
+++ b/boring-lecture/lecture1.html
@@ -7,13 +7,16 @@
 <body>
   <h3><a href="../cupcake-shop/index.html">HOME</a></h3>
   <h1>A Lecture on Coding and Cupcakes</h1>
-  <h2 class="intro">And Why No One Will Pay Me to Give It</h2>
-  <p class="intro">
+
+  <div class="intro">
+    <h2>And Why No One Will Pay Me to Give It</h2>
+   <p>
     I'm not even two minutes into this exercise and Virtual Studio shows at least 2 error codes. This would be less damaging to my image if I just pasted
     Lorem Ipsum into this paragraph like the assignment told me to do, but I'm in my 30's now and I finally realize that following the rules gets you nothing. 
     Much like breaking the rules...
-  </p>
-  <p class="intro"><strong>UPDATE:</strong>I think it's Visual Studio wiggin' out over the fact that I wrote 'css' but didn't add colons and semi-colons. I will investigate another day.</p>
+   </p>
+    <p><strong>UPDATE:</strong>I think it's Visual Studio wiggin' out over the fact that I wrote 'css' but didn't add colons and semi-colons. I will investigate another day.</p>
+  </div>
   
   <h2>Advanced Practice</h2>
   <p class="try"> 
